Separation between task and landscape tiles

--- a/home.html
+++ b/home.html
@@ -32,6 +32,8 @@
     <li><strong>M</strong> - Meadows</li>
     <li><strong>A</strong> - Any</li>
   </ul>
+  <p>The query is interpreted in clockwise direction.</p>
+  <p>Tiles from the base game, Box 1 and 2 are included.</p>
 
     <input type="text" id="tileQuery" maxlength="6" placeholder="e.g. VVAAAA" />
   <button onclick="goToTile()">Query</button>
